# python-execution-visualizer

./: .gitignore  README.md  count_metrics.py  interface.kv  main.py  pyproject.toml
core/: examples.py  executor.py  graph.py  parser.py  terminal.py  tracer.py
tests/: test_executor.py  test_parser.py  test_serializer.py  test_tracer.py
utils/: serializer.py
