[project]
name = "kivy-app-project"
version = "0.1.0"
description = "Final Project using kivy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docutils>=0.22.4",
    "kivy>=2.3.1",
    "kivy-deps-angle>=0.4.0",
    "kivy-deps-glew>=0.3.1",
    "kivy-deps-gstreamer>=0.3.4",
    "kivy-deps-sdl2>=0.8.0",
    "pygments>=2.19.2",
]
