[project]
name = "kivy-app-project"
version = "0.1.0"
description = "Final Project using kivy: Python code execution visualizer using kivy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docutils>=0.22.4",
    "kivy>=2.3.1",
    "kivy-deps-angle>=0.4.0; sys_platform == 'win32'",
    "kivy-deps-glew>=0.3.1; sys_platform == 'win32'",
    "kivy-deps-gstreamer>=0.3.4; sys_platform == 'win32'",
    "kivy-deps-sdl2>=0.8.0; sys_platform == 'win32'",
    "kivymd==1.1.1",
    "pygments>=2.19.2",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
kivymd = { url = "https://github.com/kivymd/KivyMD/archive/master.zip" }
